# Django_homework

./: .env.sample  data.json  dump_catalog.json  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: utls.py
catalog/migrations/: 0001_initial.py  0002_alter_product_create_date_and_more.py  0003_alter_product_description.py  0004_blog.py  0005_alter_blog_is_published.py  0006_alter_product_category_alter_product_description_and_more.py  0007_blog_owner_product_owner.py  0008_alter_product_options_product_is_published_and_more.py
catalog/templates/catalog/: add_product.html  base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contact.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_nav.html
catalog/templatetags/: catalog_tags.py
config/: settings.py
static/css/: blog1.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
